--- a/templates/login.html
+++ b/templates/login.html
@@ -5,15 +5,21 @@
 {% endblock %}
 
 {% block main %}
-    <form action="/login" method="post">
-        <div class="mb-3">
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" name="username" placeholder="Username" type="text">
-        </div>
-        <div class="mb-3">
-            <input class="form-control mx-auto w-auto" name="password" placeholder="Password" type="password">
-        </div>
-        <button class="btn btn-primary" type="submit">Log In</button>
-    </form>
+    <div class="loginform">
+        <form action="/login" method="post">
+            <div class="mb-3">
+                <input autocomplete="off" autofocus class="form-control mx-auto w-auto" name="username" placeholder="Username" type="text">
+            </div>
+            <div class="mb-3">
+                <input class="form-control mx-auto w-auto" name="password" placeholder="Password" type="password">
+            </div>
+            <div class="centered">
+                <button class="btn btn-primary" type="submit">Log In</button>
+            </div>
+            <div class="centered">
+                <a href="/register">Create account</a>
+            </div>
+        </form>
+    </div>
 
-    <a href="/register">Create account</a>
 {% endblock %}
